# die-yield-calculator

./: .editorconfig  Cargo.toml  readme.md  rustfmt.toml
.github/workflows/: rust.yml
src/: die.rs  main.rs  util.rs  wafer.rs
src/ui/: input.rs  mod.rs  styles.rs  ui.rs  wafer.rs
src/view/: calculator.rs  mod.rs  wafer.rs
src/view/components/: mod.rs  scribe.rs  simple.rs  size.rs  translate.rs
src/wafer/: diameter.rs  mod.rs  shape.rs  yield_model.rs
