[package]
name = "die-yield-calculator"
version = "0.2.2"
authors = ["Redfire <redfire75369@hotmail.com>"]
edition = "2021"

[dependencies]
rand = "0.8.5"

[dependencies.iced]
version = "0.8.0"
default-features = false
features = ["canvas", "glow"]

[dependencies.iced_aw]
version = "0.4.1"
default-features = false
features = ["number_input"]
