[package]
name = "die-yield-calculator"
version = "0.2.3"
authors = ["Redfire <redfire75369@hotmail.com>"]
edition = "2021"

[dependencies]
rand = "0.8.5"

[dependencies.iced]
version = "0.10.0"
default-features = false
features = ["canvas"]

[dependencies.iced_aw]
version = "0.7.0"
default-features = false
features = ["number_input"]
