[package]
name = "die-yield-calculator"
version = "0.3.0"
authors = ["Redfire <redfire75369@hotmail.com>"]
edition = "2021"

[dependencies]
rand = "0.8.5"

[dependencies.iced]
version = "0.10.0"
default-features = false
features = ["canvas"]

[dependencies.iced_aw]
git = "https://github.com/iced-rs/iced_aw"
default-features = false
features = ["grid", "number_input"]

[profile.release]
lto = "fat"
strip = "symbols"
